// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductName /> should match the snapshot Loader 1`] = `
<DocumentFragment>
  <h1
    class="productNameContainer mv0 t-heading-4"
  >
    <span
      class="productBrand"
    >
      Billabong Die Cut Loose Fit Short Sleeve Rashguard - Men's 
    </span>
  </h1>
</DocumentFragment>
`;

exports[`<ProductName /> should match the snapshot with Name and Brand 1`] = `
<DocumentFragment>
  <h1
    class="productNameContainer mv0 t-heading-4"
  >
    <span
      class="productBrand"
    >
      ProductTest - ProductBrandName
    </span>
  </h1>
</DocumentFragment>
`;

exports[`<ProductName /> should match the snapshot with Name and Product Reference 1`] = `
<DocumentFragment>
  <h1
    class="productNameContainer mv0 t-heading-4"
  >
    <span
      class="productBrand"
    >
      ProductTest 
    </span>
    <span
      class="productReference"
    >
      REF: productReferenceTest
    </span>
  </h1>
</DocumentFragment>
`;

exports[`<ProductName /> should match the snapshot with Name and SkuName 1`] = `
<DocumentFragment>
  <h1
    class="productNameContainer mv0 t-heading-4"
  >
    <span
      class="productBrand"
    >
      ProductTest 
    </span>
    <span
      class="productBrand"
    >
      ProductSkuName
    </span>
  </h1>
</DocumentFragment>
`;

exports[`<ProductName /> should match the snapshot with all options 1`] = `
<DocumentFragment>
  <h1
    class="productNameContainer mv0 t-heading-4"
  >
    <span
      class="productBrand"
    >
      ProductTest - ProductBrandName
    </span>
    <span
      class="productBrand"
    >
      ProductSkuName
    </span>
    <span
      class="productReference"
    >
      REF: productReferenceTest
    </span>
  </h1>
</DocumentFragment>
`;

exports[`<ProductName /> should match the snapshot with only Name 1`] = `
<DocumentFragment>
  <h1
    class="productNameContainer mv0 t-heading-4"
  >
    <span
      class="productBrand"
    >
      ProductTest 
    </span>
  </h1>
</DocumentFragment>
`;
